--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block title %} Flasky - {{ user.username }}{% endblock %}
 {% block page_content %}
     <div class="page-header">
         <h1>{{ user.username }}</h1>
@@ -20,4 +23,10 @@
             Last seen {{ moment(user.last_seen).fromNow() }}.
         </p>
     </div>
+
+    {% if user == current_user %}
+        <a class="btn btn-default" href="{{ url_for('.edit_profile') }}">
+            Edit Profile
+        </a>
+    {% endif %}
 {% endblock %}
