--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,6 +2,10 @@
 
 {% block title %}Flasky{% endblock %}
 
+{% block head %}
+    {{ super() }}
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+{% endblock %}
 
 
 {% block navbar %}
@@ -15,23 +19,30 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Flasky</a>
+                <a class="navbar-brand" href="{{ url_for('main.index') }}">Flasky</a>
             </div>
 
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="/">Home</a></li>
+                    {% if current_user.is_authenticated %}
+                        <li><a href="{{ url_for('main.user', username=current_user.username) }}">Profile</a></li>
+                    {% endif %}
+
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
+                    {% if current_user.can(Permission.MODERATE_COMMENT) %}
+                        <li><a href="{{ url_for('main.moderate') }}">Moderate Comments</a></li>
+                    {% endif %}
                     {% if current_user.is_authenticated %}
                         <li><a href="{{ url_for('auth.logout') }}">Sign Out</a></li>
-                        <li><a href="{{ url_for('main.user', username=current_user.username) }}">Profile</a>
-                        </li>
                     {% else %}
                         <li><a href="{{ url_for('auth.login') }}">Sign In</a></li>
                     {% endif %}
                 </ul>
+
+
             </div>
         </div>
     </div>
@@ -47,7 +58,9 @@
                 {{ message }}
             </div>
         {% endfor %}
-        {% block page_content %}{% endblock %}
+        {% block page_content %}
+
+        {% endblock %}
     </div>
 
 {% endblock %}
