--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,13 +1,16 @@
-{% extends "bootstrap/base.html" %}
-
-{% block title %}Flasky{% endblock %}
-
-{% block head %}
-    {{ super() }}
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap-theme.css">
+    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
-{% endblock %}
-
-
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
 {% block navbar %}
     <div class="navbar navbar-inverse" role="navigation">
         <div class="container">
@@ -21,16 +24,13 @@
                 </button>
                 <a class="navbar-brand" href="{{ url_for('main.index') }}">Flasky</a>
             </div>
-
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="/">Home</a></li>
                     {% if current_user.is_authenticated %}
                         <li><a href="{{ url_for('main.user', username=current_user.username) }}">Profile</a></li>
                     {% endif %}
-
                 </ul>
-
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.can(Permission.MODERATE_COMMENT) %}
                         <li><a href="{{ url_for('main.moderate') }}">Moderate Comments</a></li>
@@ -41,15 +41,10 @@
                         <li><a href="{{ url_for('auth.login') }}">Sign In</a></li>
                     {% endif %}
                 </ul>
-
-
             </div>
         </div>
     </div>
-
-
 {% endblock %}
-
 {% block content %}
     <div class="container">
         {% for message in get_flashed_messages() %}
@@ -62,11 +57,10 @@
 
         {% endblock %}
     </div>
-
 {% endblock %}
+<script src="../static/bootstrap/js/bootstrap.js"></script>
+</body>
+</html>
 
-{% block scripts %}
-    {{ super() }}
-    {{ moment.include_moment() }}
-{% endblock %}
+
 
