начало работы с админкой

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,46 +1,15 @@
-{% extends "base.html" %} {% import "bootstrap/wtf.html" as wtf %}
+{% extends "base.html" %}
+{#{% import "bootstrap/wtf.html" as wtf %}#}
 {% import "_macros.html" as macros %}
 {% block title %}Flasky{% endblock %}
 {% block page_content %}
-
-    {#    <div class="row col-md-offset-3 col-md-offset-2">#}
-    {#        <div class="col-lg-4 col-md-4">#}
-    {#            <img class="img-rounded" data-src="holder.js/300x200" src="static\a.jpg" alt="" width="275"#}
-    {#                 height="350">#}
-    {#        </div>#}
-    {#        <div class="col-lg-6 col-md-6">#}
-    {#            <div class="bubble">#}
-    {#                <h2 style="text-align: center!important; color: black;"><b>HELLO</b></h2>#}
-    {#            </div>#}
-    {##}
-    {##}
-    {##}
-    {#            <h2>I'm <b>Pogorelovsky Mikhail</b></h2>#}
-    {#            <h3>Developer and Startup entepreneur</h3>#}
-    {##}
-    {#            <dl class="dl-horizontal">#}
-    {#                <dt class="text-right">AGE</dt>#}
-    {#                <dd>{{ age }}</dd>#}
-    {#                <dt>ADDRESS</dt>#}
-    {#                <dd>{{ addres }}</dd>#}
-    {#                <dt>EMAIL</dt>#}
-    {#                <dd>{{ email }}</dd>#}
-    {#                <dt>PHONE</dt>#}
-    {#                <dd>{{ phone }}</dd>#}
-    {#            </dl>#}
-    {##}
-    {#        </div>#}
-    {#    </div>#}
     <div class="row col-md-offset-3 col-md-offset-2">
-
         <div class="col-lg-2 col-md-2">
             <img class=" img-responsive img-circle" data-src="holder.js/300x200" src="static\a.jpg" alt="">
         </div>
-
         <div class="col-lg-6 col-md-6 text-center">
             <h2><b>MIKHAIL POGORELOVSKIY</b></h2>
             <h3>PROGRAMMER & DEVELOPER SITES</h3>
-
             <div class="row col-md-offset-3 col-md-offset-2">
                 <div class="col-md-2">
                     <a style="color: black" href="#"
@@ -67,9 +36,7 @@
                 </div>
             </div>
         </div>
-
     </div>
-
     <div class="row col-md-offset-4">
         <div class="col-lg-8 col-md-6 text-left">
             <h3><p>Hi, My name is Mikhayl.</p></h3>
@@ -89,12 +56,12 @@
                 my
                 experience and skills.</p>
             <ul>
-            <li>Core web: HTML/CSS, JavaScript;</li>
-            <li>web backend: php, python+flsk (I have experience in writing heavily sites);</li>
-            <li>desctop programming :C#,C++, pythone;</li>
-            <li>OS: Linux, Windows;</li>
-            <li>VCS: Git;</li>
-            <li>SQL;</li>
+                <li>Core web: HTML/CSS, JavaScript;</li>
+                <li>web backend: php, python+flsk (I have experience in writing heavily sites);</li>
+                <li>desctop programming :C#,C++, pythone;</li>
+                <li>OS: Linux, Windows;</li>
+                <li>VCS: Git;</li>
+                <li>SQL;</li>
             </ul>
 
         </div>
