--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -255,7 +255,8 @@ desired effect
       <ul class="sidebar-menu">
         <li class="header">HEADER</li>
         <!-- Optionally, you can add icons to the links -->
-        <li class="active"><a href="{{ url_for('admin.add_message', username=current_user.username) }}"><i class="fa fa-link"></i> <span>Add material</span></a></li>
+        <li {% if page_header=='Create new Material' %} class="active"{% endif %}><a href="{{ url_for('admin.add_message', username=current_user.username) }}"><i class="fa fa-link"></i> <span>Add material</span></a></li>
+        <li {% if page_header == 'Upload file' %} class="active" {% endif %}><a href="{{ url_for('admin.upload', username=current_user.username) }}"><i class="fa fa-link"></i> <span>Upload photo</span></a></li>
         <li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>
         <li class="treeview">
           <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span>
