--- a/app/templates/edit_post.html
+++ b/app/templates/edit_post.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
-{#{% import "bootstrap/wtf.html" as wtf %}#}
+{% from "_macro_render.html" import render_field %}
+{% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}
     Edit Post
@@ -10,7 +11,7 @@
         <h1>Edit Post</h1>
     </div>
     <div>
-        {{ wtf.quick_form(form) }}
+                {{ wtf.quick_form(form) }}
     </div>
 {% endblock %}
 
