--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% import "macros.html" as wtf %}
-{# {% imort "bootstrap/wtf.html" as wtf %}#}
+{% import "bootstrap/wtf.html" as wtf %}
 {% import "_macros.html" as macros %}
 
 {% block title %}Flasky{% endblock %}
