--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{#{% import "bootstrap/wtf.html" as wtf %}#}
+{% import "bootstrap/wtf.html" as wtf %}
 {% import "_macros.html" as macros %}
 {% block title %}
     Post
